# METIS

./: .gitignore  CMakeLists.txt
GKlib/: CMakeLists.txt  gk_arch.h
conf/: gkbuild.cmake
include/: metis.h
libmetis/: CMakeLists.txt
